--- a/Resources/Maps/marathon.yml
+++ b/Resources/Maps/marathon.yml
@@ -6404,18 +6404,18 @@ entities:
             2: 34952
           6,-6:
             2: 61440
-            6: 224
+            4: 224
           6,-5:
             0: 112
             2: 2184
           6,-8:
             3: 224
-            4: 57344
-          6,-7:
-            4: 224
             5: 57344
+          6,-7:
+            5: 224
+            6: 57344
           6,-9:
-            4: 57568
+            5: 57568
           7,-5:
             2: 4080
           7,-6:
@@ -7471,6 +7471,21 @@ entities:
           temperature: 293.15
           moles:
           - 0
+          - 6666.982
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+          - 0
+        - volume: 2500
+          temperature: 293.15
+          moles:
+          - 0
           - 0
           - 0
           - 0
@@ -7487,21 +7502,6 @@ entities:
           moles:
           - 6666.982
           - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-          - 0
-        - volume: 2500
-          temperature: 293.15
-          moles:
-          - 0
-          - 6666.982
           - 0
           - 0
           - 0
@@ -116796,6 +116796,13 @@ entities:
     - type: Transform
       pos: 33.5,4.5
       parent: 30
+- proto: SpawnMobParrot
+  entities:
+  - uid: 22525
+    components:
+    - type: Transform
+      pos: -6.5,-34.5
+      parent: 30
 - proto: SpawnMobPossumMorty
   entities:
   - uid: 6921
@@ -116938,6 +116945,13 @@ entities:
     components:
     - type: Transform
       pos: -6.5,-9.5
+      parent: 30
+- proto: SpawnPointChiefEngineer
+  entities:
+  - uid: 22524
+    components:
+    - type: Transform
+      pos: -8.5,-34.5
       parent: 30
 - proto: SpawnPointChiefMedicalOfficer
   entities:
