added service worker jobs for testing

--- a/Resources/Prototypes/Maps/trieste.yml
+++ b/Resources/Prototypes/Maps/trieste.yml
@@ -9,4 +9,8 @@
       components:
         - type: StationNameSetup
           mapNameTemplate: "Trieste"
+        - type: StationJobs
+          availableJobs:
+            #service
+            ServiceWorker: [ 3, 3 ]
 
