--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
@@ -4,6 +4,7 @@
   name: atmospheric alerts computer
   description: Used to access the station's atmospheric automated alert system.
   components:
+  - type: StationAiWhitelist
   - type: Computer
     board: AlertsComputerCircuitboard
   - type: Sprite
@@ -189,6 +190,7 @@
   name: IFF computer
   description: Allows you to control the IFF characteristics of this vessel.
   components:
+  - type: StationAiWhitelist
   - type: IFFConsole
   - type: Sprite
     layers:
@@ -236,6 +238,7 @@
   name: power monitoring computer
   description: It monitors power levels across the station.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -274,6 +277,7 @@
   name: medical records computer
   description: This can be used to check medical records.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -297,6 +301,7 @@
   name: criminal records computer
   description: This can be used to check criminal records. Only security can modify them.
   components:
+  - type: StationAiWhitelist
   - type: CriminalRecordsConsole
   - type: UserInterface
     interfaces:
@@ -332,6 +337,7 @@
   name: station records computer
   description: This can be used to check station records.
   components:
+  - type: StationAiWhitelist
   - type: GeneralStationRecordConsole
   - type: UserInterface
     interfaces:
@@ -355,6 +361,7 @@
   name: crew monitoring console
   description: Used to monitor active health sensors built into most of the crew's uniforms.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -390,6 +397,7 @@
   name: R&D computer
   description: A computer used to interface with R&D tools.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -434,6 +442,7 @@
   name: analysis console
   description: A computer used to interface with the artifact analyzer.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -480,6 +489,7 @@
   name: ID card computer
   description: Terminal for programming Nanotrasen employee ID cards to access parts of the station.
   components:
+  - type: StationAiWhitelist
   - type: IdCardConsole
     privilegedIdSlot:
       name: id-card-console-privileged-id
@@ -539,6 +549,7 @@
   name: body scanner computer
   description: A body scanner.
   components:
+  - type: StationAiWhitelist
   - type: ApcPowerReceiver
     powerLoad: 500
   - type: Computer
@@ -624,6 +635,7 @@
   name: solar control computer
   description: A controller for solar panel arrays.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -654,6 +666,7 @@
   name: mass scanner computer
   description: A computer for detecting nearby bodies, displaying them by position and mass.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -684,6 +697,7 @@
   name: cargo shuttle computer
   description: Used to order the shuttle.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -719,6 +733,7 @@
   name: cargo request computer
   description: Used to order supplies and approve requests.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -767,6 +782,7 @@
   name: cargo bounty computer
   description: Used to manage currently active bounties.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -803,6 +819,7 @@
   name: cloning console computer
   description: The centerpiece of the cloning system, medicine's greatest accomplishment. It has lots of ports and wires.
   components:
+  - type: StationAiWhitelist
   - type: CloningConsole
   - type: DeviceList
   - type: DeviceNetwork
@@ -852,6 +869,7 @@
   name: salvage expeditions computer
   description: Used to accept salvage missions, if you're tough enough.
   components:
+    - type: StationAiWhitelist
     - type: Sprite
       layers:
         - map: ["computerLayerBody"]
@@ -969,6 +987,7 @@
   name: cargo sale computer
   description: Used to sell goods loaded onto cargo pallets.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -1005,6 +1024,7 @@
   name: news manager console
   description: Write your message to the world!
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
@@ -1080,6 +1100,7 @@
   name: robotics control console
   description: Used to remotely monitor, disable and destroy the station's cyborgs.
   components:
+  - type: StationAiWhitelist
   - type: Sprite
     layers:
     - map: ["computerLayerBody"]
