Update cellular fusion

--- a/Resources/Prototypes/Cells/animals.yml
+++ b/Resources/Prototypes/Cells/animals.yml
@@ -19,7 +19,7 @@
   id: Feliform
   name: cell-Feliform-name
   color: "#A0522D"
-  modifiers: # Just for test remove later
+  modifiers:
   - OwO
 
 - type: cell
