--- a/Resources/Prototypes/Entities/Structures/Specific/Anomaly/inner_anomalies.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Anomaly/inner_anomalies.yml
@@ -263,3 +263,94 @@
         energy: 2.5
         color: "#00ccff"
       - type: BluespaceAnomaly
+
+- type: entity
+  parent: BaseAnomalyTrap
+  id: AnomalyTrapFlesh
+  suffix: Flesh
+  components:
+  - type: AddCompOnTrigger
+    components:
+    - type: InnerBodyAnomaly
+      startMessage: inner-anomaly-start-message-flesh
+      layerSprite:
+        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
+        state: flesh_eyes
+      components:
+      - type: Anomaly
+        deleteEntity: false
+        corePrototype: AnomalyCoreFlesh
+      - type: PointLight
+        radius: 1.3
+        energy: 2.5
+        color: "#cb5b7e"
+      - type: TileSpawnAnomaly
+        entries:
+        - settings:
+            spawnOnPulse: true
+            spawnOnStabilityChanged: true
+            minAmount: 1
+            maxAmount: 3
+            maxRange: 2
+          floor: FloorFlesh
+        - settings:
+            spawnOnSuperCritical: true
+            minAmount: 5
+            maxAmount: 15
+            maxRange: 5
+          floor: FloorFlesh
+      - type: EntitySpawnAnomaly
+        entries:
+        - settings:
+            spawnOnPulse: true
+            minAmount: 1
+            maxAmount: 2
+            minRange: 1.5
+            maxRange: 2.5
+          spawns:
+          - FleshBlocker
+        - settings:
+            spawnOnPulse: true
+            maxAmount: 1
+            minRange: 3
+            maxRange: 4.5
+          spawns:
+          - MobFleshJared
+          - MobFleshGolem
+          - MobFleshClamp
+          - MobFleshLover
+        - settings:
+            spawnOnSuperCritical: true
+            minAmount: 5
+            maxAmount: 8
+            minRange: 5
+            maxRange: 15
+          spawns:
+          - FleshBlocker
+        - settings:
+            spawnOnSuperCritical: true
+            minAmount: 2
+            maxAmount: 5
+            maxRange: 8
+          spawns:
+          - MobFleshJared
+          - MobFleshGolem
+          - MobFleshClamp
+          - MobFleshLover
+        - settings:
+            spawnOnSuperCritical: true
+            minAmount: 2
+            maxAmount: 4
+            maxRange: 10
+          spawns:
+          - FleshKudzu
+        - settings:
+            spawnOnShutdown: true
+            maxAmount: 2
+            maxRange: 1
+          spawns:
+          - MobFleshJared
+          - MobFleshGolem
+          - MobFleshClamp
+          - MobFleshLover
+          - FleshKudzu
