--- a/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/Computers/computers.yml
@@ -1152,6 +1152,8 @@
       state: generic_keys
   - type: ApcPowerReceiver
     powerLoad: 1000
+  - type: Computer
+    board: StationAiUploadCircuitboard
   - type: AccessReader
     access: [ [ "ResearchDirector" ] ]
   - type: Lock
