--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry-bottles.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry-bottles.yml
@@ -224,9 +224,11 @@
 
 - type: entity
   id: PotassiumChemistryBottle
-  name: potassium bottle
+  suffix: potassium
   parent: BaseChemistryBottleFilled
   components:
+  - type: Label
+    currentLabel: reagent-name-potassium
   - type: SolutionContainerManager
     solutions:
       drink:
@@ -237,9 +239,11 @@
 
 - type: entity
   id: NitrogenChemistryBottle
-  name: nitrogen bottle
+  suffix: nitrogen
   parent: BaseChemistryBottleFilled
   components:
+  - type: Label
+    currentLabel: reagent-name-nitrogen
   - type: SolutionContainerManager
     solutions:
       drink:
@@ -250,9 +254,11 @@
 
 - type: entity
   id: PhosphorusChemistryBottle
-  name: phosphorus bottle
+  suffix: phosphorus
   parent: BaseChemistryBottleFilled
   components:
+  - type: Label
+    currentLabel: reagent-name-phosphorus
   - type: SolutionContainerManager
     solutions:
       drink:
@@ -263,9 +269,11 @@
 
 - type: entity
   id: HydrogenChemistryBottle
-  name: hydrogen bottle
+  suffix: hydrogen
   parent: BaseChemistryBottleFilled
   components:
+  - type: Label
+    currentLabel: reagent-name-hydrogen
   - type: SolutionContainerManager
     solutions:
       drink:
@@ -276,9 +284,11 @@
 
 - type: entity
   id: EthanolChemistryBottle
-  name: ethanol bottle
+  suffix: ethanol
   parent: BaseChemistryBottleFilled
   components:
+  - type: Label
+    currentLabel: reagent-name-ethanol
   - type: SolutionContainerManager
     solutions:
       drink:
