--- a/Resources/Prototypes/Entities/Structures/Specific/Anomaly/inner_anomalies.yml
+++ b/Resources/Prototypes/Entities/Structures/Specific/Anomaly/inner_anomalies.yml
@@ -1,356 +1,96 @@
 - type: entity
-  name: anomaly obsession trap
-  id: BaseAnomalyTrap
-  abstract: true
-  components:
-  - type: Physics
-    bodyType: Static
-    fixedRotation: true
-  - type: TriggerOnCollide
-    fixtureID: anom
-    ignoreOtherNonHard: false
-  - type: Fixtures
-    fixtures:
-      anom:
-        shape:
-          !type:PhysShapeCircle
-          radius: 2.27 # i love 27
-        hard: false
-        mask:
-        - MobMask
-        layer:
-        - MobLayer
-  - type: DeleteOnTrigger
-  - type: AddCompOnTrigger
-    toOther: true
-
-
-- type: entity
   parent: BaseAnomalyTrap
   id: AnomalyTrapPyroclastic
   suffix: Pyroclastic
   components:
-  - type: AddCompOnTrigger
-    components:
-    - type: InnerBodyAnomaly
-      startMessage: inner-anomaly-start-message-pyro
-      layerSprite:
-        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
-        state: fire_eyes
-      components:
-      - type: Anomaly
-        deleteEntity: false
-        corePrototype: AnomalyCorePyroclastic
-      - type: PointLight
-        radius: 1.3
-        energy: 2.5
-        color: "#E25822"
-        castShadows: false
-      - type: PyroclasticAnomaly
-        maximumIgnitionRadius: 3
-      - type: TempAffectingAnomaly
-        tempChangePerSecond: 10
-        hotspotExposeTemperature: 500
-      - type: GasProducerAnomaly
-        releasedGas: 3
-        releaseOnMaxSeverity: true
-        spawnRadius: 4
-        tileCount: 5
-        tempChange: 420
-      - type: ProjectileAnomaly
-        projectilePrototype: ProjectileAnomalyFireball
-        projectileSpeed: 0.5
-        minProjectiles: 1
-        maxProjectiles: 3
-      - type: DamageOnAttacked
-        damage:
-          types:
-            Heat: 3
+  - type: InnerBodyAnomaly
+    injection: AnomalyInjectionPyroclastic
+    startMessage: inner-anomaly-start-message-pyro
+    layerSprite:
+      sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
+      state: fire_eyes
 
-- type: entity
-  parent: BaseAnomalyTrap
-  id: AnomalyTrapElectric
-  suffix: Electric
-  components:
-  - type: AddCompOnTrigger
-    components:
-    - type: InnerBodyAnomaly
-      startMessage: inner-anomaly-start-message-shock
-      layerSprite:
-        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
-        state: shock_eyes
-      components:
-      - type: Anomaly
-        deleteEntity: false
-        corePrototype: AnomalyCoreElectricity
-      - type: PointLight
-        radius: 1.3
-        energy: 2.5
-        color: "#ffffaa"
-        castShadows: false
-      - type: ElectricityAnomaly
-        minBoltCount: 1
-        maxBoltCount: 3
-        maxElectrocuteRange: 4
-        maxElectrocuteDamage: 10
-        maxElectrocuteDuration: 4
-      - type: DamageOnAttacked
-        damage:
-          types:
-            Shock: 3
-
-- type: entity
-  parent: BaseAnomalyTrap
-  id: AnomalyTrapShadow
-  suffix: Shadow
-  components:
-  - type: AddCompOnTrigger
-    components:
-    - type: InnerBodyAnomaly
-      startMessage: inner-anomaly-start-message-shadow
-      layerSprite:
-        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
-        state: shadow_eyes
-      components:
-      - type: Anomaly
-        deleteEntity: false
-        corePrototype: AnomalyCoreShadow
-      - type: PointLight
-        radius: 1.3
-        energy: 2.5
-        color: "#793a80"
-      - type: EntitySpawnAnomaly
-        entries:
-        - settings:
-            spawnOnPulse: true
-            spawnOnSuperCritical: true
-            minAmount: 5
-            maxAmount: 10
-            maxRange: 2
-          spawns:
-          - ShadowKudzuWeak
-        - settings:
-            spawnOnSuperCritical: true
-            minAmount: 15
-            maxAmount: 20
-            maxRange: 25
-          spawns:
-          - ShadowKudzu
-      - type: DamageOnAttacked
-        damage:
-          types:
-            Cold: 3
-
-- type: entity
-  parent: BaseAnomalyTrap
-  id: AnomalyTrapIce
-  suffix: Ice
-  components:
-  - type: AddCompOnTrigger
-    components:
-    - type: InnerBodyAnomaly
-      startMessage: inner-anomaly-start-message-frost
-      layerSprite:
-        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
-        state: frost_eyes
-      components:
-      - type: Anomaly
-        deleteEntity: false
-        corePrototype: AnomalyCoreIce
-      - type: PointLight
-        radius: 1.3
-        energy: 2.5
-        color: "#befaff"
-      - type: ExplosionAnomaly
-        supercriticalExplosion: Cryo
-        explosionTotalIntensity: 150
-        explosionDropoff: 2
-        explosionMaxTileIntensity: 20
-      - type: ProjectileAnomaly
-        projectilePrototype: ProjectileIcicle
-        minProjectiles: 1
-        maxProjectiles: 4
-      - type: EntitySpawnAnomaly
-        entries:
-        - settings:
-            spawnOnStabilityChanged: true
-            minAmount: 3
-            maxAmount: 8
-            maxRange: 2
-          spawns:
-          - IceCrust
-      - type: TempAffectingAnomaly
-        tempChangePerSecond: -10
-        hotspotExposeTemperature: -500
-      - type: GasProducerAnomaly
-        releasedGas: 8 # Frezon. Please replace if there is a better way to specify this
-        releaseOnMaxSeverity: true
-        spawnRadius: 0
-      - type: DamageOnAttacked
-        damage:
-          types:
-            Cold: 3
-
-- type: entity
-  parent: BaseAnomalyTrap
-  id: AnomalyTrapFlora
-  suffix: Flora
-  components:
-  - type: AddCompOnTrigger
-    components:
-    - type: InnerBodyAnomaly
-      startMessage: inner-anomaly-start-message-flora
-      layerSprite:
-        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
-        state: flora_eyes
-      components:
-      - type: Anomaly
-        deleteEntity: false
-        corePrototype: AnomalyCoreFlora
-      - type: PointLight
-        radius: 1.3
-        energy: 2.5
-        color: "#6270bb"
-    - type: TileSpawnAnomaly
-      entries:
-      - settings:
-          spawnOnPulse: true
-          minAmount: 2
-          maxAmount: 5
-          maxRange: 2
-        floor: FloorAstroGrass
-      - settings:
-          spawnOnSuperCritical: true
-          minAmount: 5
-          maxAmount: 15
-          maxRange: 7
-        floor: FloorAstroGrass
-    - type: EntitySpawnAnomaly
-      entries:
-      - settings:
-          spawnOnPulse: true
-          minAmount: 1
-          maxAmount: 3
-          maxRange: 1
-        spawns:
-        - KudzuFlowerFriendly
-      - settings:
-          spawnOnSuperCritical: true
-          minAmount: 2
-          maxAmount: 6
-          maxRange: 3
-        spawns:
-        - KudzuFlowerAngry
-
-- type: entity
-  parent: BaseAnomalyTrap
-  id: AnomalyTrapBluespace
-  suffix: Bluespace
-  components:
-  - type: AddCompOnTrigger
-    components:
-    - type: InnerBodyAnomaly
-      startMessage: inner-anomaly-start-message-bluespace
-      layerSprite:
-        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
-        state: bluespace_eyes
-      components:
-      - type: Anomaly
-        deleteEntity: false
-        corePrototype: AnomalyCoreBluespace
-      - type: PointLight
-        radius: 1.3
-        energy: 2.5
-        color: "#00ccff"
-      - type: BluespaceAnomaly
-
-- type: entity
-  parent: BaseAnomalyTrap
-  id: AnomalyTrapFlesh
-  suffix: Flesh
-  components:
-  - type: AddCompOnTrigger
-    components:
-    - type: InnerBodyAnomaly
-      startMessage: inner-anomaly-start-message-flesh
-      layerSprite:
-        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
-        state: flesh_eyes
-      components:
-      - type: Anomaly
-        deleteEntity: false
-        corePrototype: AnomalyCoreFlesh
-      - type: PointLight
-        radius: 1.3
-        energy: 2.5
-        color: "#cb5b7e"
-      - type: TileSpawnAnomaly
-        entries:
-        - settings:
-            spawnOnPulse: true
-            spawnOnStabilityChanged: true
-            minAmount: 1
-            maxAmount: 3
-            maxRange: 2
-          floor: FloorFlesh
-        - settings:
-            spawnOnSuperCritical: true
-            minAmount: 5
-            maxAmount: 15
-            maxRange: 5
-          floor: FloorFlesh
-      - type: EntitySpawnAnomaly
-        entries:
-        - settings:
-            spawnOnPulse: true
-            minAmount: 1
-            maxAmount: 2
-            minRange: 1.5
-            maxRange: 2.5
-          spawns:
-          - FleshBlocker
-        - settings:
-            spawnOnPulse: true
-            maxAmount: 1
-            minRange: 3
-            maxRange: 4.5
-          spawns:
-          - MobFleshJared
-          - MobFleshGolem
-          - MobFleshClamp
-          - MobFleshLover
-        - settings:
-            spawnOnSuperCritical: true
-            minAmount: 5
-            maxAmount: 8
-            minRange: 5
-            maxRange: 15
-          spawns:
-          - FleshBlocker
-        - settings:
-            spawnOnSuperCritical: true
-            minAmount: 2
-            maxAmount: 5
-            maxRange: 8
-          spawns:
-          - MobFleshJared
-          - MobFleshGolem
-          - MobFleshClamp
-          - MobFleshLover
-        - settings:
-            spawnOnSuperCritical: true
-            minAmount: 2
-            maxAmount: 4
-            maxRange: 10
-          spawns:
-          - FleshKudzu
-        - settings:
-            spawnOnShutdown: true
-            maxAmount: 2
-            maxRange: 1
-          spawns:
-          - MobFleshJared
-          - MobFleshGolem
-          - MobFleshClamp
-          - MobFleshLover
-          - FleshKudzu
+#- type: entity
+#  parent: BaseAnomalyTrap
+#  id: AnomalyTrapElectric
+#  suffix: Electric
+#  components:
+#  - type: AddCompOnTrigger
+#    components:
+#  - type: InnerBodyAnomaly
+#    startMessage: inner-anomaly-start-message-shock
+#    layerSprite:
+#      sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
+#      state: shock_eyes
+#    components:
+#
+#- type: entity
+#  parent: BaseAnomalyTrap
+#  id: AnomalyTrapShadow
+#  suffix: Shadow
+#  components:
+#  - type: AddCompOnTrigger
+#    components:
+#    - type: InnerBodyAnomaly
+#      startMessage: inner-anomaly-start-message-shadow
+#      layerSprite:
+#        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
+#        state: shadow_eyes
+#      components:
+#
+#- type: entity
+#  parent: BaseAnomalyTrap
+#  id: AnomalyTrapIce
+#  suffix: Ice
+#  components:
+#  - type: AddCompOnTrigger
+#    components:
+#    - type: InnerBodyAnomaly
+#      startMessage: inner-anomaly-start-message-frost
+#      layerSprite:
+#        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
+#        state: frost_eyes
+#      components:
+#
+#- type: entity
+#  parent: BaseAnomalyTrap
+#  id: AnomalyTrapFlora
+#  suffix: Flora
+#  components:
+#  - type: AddCompOnTrigger
+#    components:
+#    - type: InnerBodyAnomaly
+#      startMessage: inner-anomaly-start-message-flora
+#      layerSprite:
+#        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
+#        state: flora_eyes
+#      components:
+#
+#- type: entity
+#  parent: BaseAnomalyTrap
+#  id: AnomalyTrapBluespace
+#  suffix: Bluespace
+#  components:
+#  - type: AddCompOnTrigger
+#    components:
+#    - type: InnerBodyAnomaly
+#      startMessage: inner-anomaly-start-message-bluespace
+#      layerSprite:
+#        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
+#        state: bluespace_eyes
+#      components:
+#
+#- type: entity
+#  parent: BaseAnomalyTrap
+#  id: AnomalyTrapFlesh
+#  suffix: Flesh
+#  components:
+#  - type: AddCompOnTrigger
+#    components:
+#    - type: InnerBodyAnomaly
+#      startMessage: inner-anomaly-start-message-flesh
+#      layerSprite:
+#        sprite: Structures/Specific/Anomalies/inner_anom_layer.rsi
+#        state: flesh_eyes
+#      components:
+#
