Added Duck Duck Goose to artifact spawns

--- a/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/mobs.yml
@@ -979,3 +979,18 @@
   - type: ConditionalSpawner
     prototypes:
     - MobRaptor
+
+- type: entityTable
+  id: SpawnMobDuckDuckGoose
+  table: !type:GroupSelector
+    children:
+    # Common Group
+    - !type:GroupSelector
+      weight: 75
+      children:
+      # Smoker's specialty
+      - !type:AllSelector
+        children:
+        - id: MobDuckMallard
+        - id: MobDuckBrown
+        - id: MobGoose
