--- a/Resources/Prototypes/Entities/Objects/Misc/rubber_stamp.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/rubber_stamp.yml
@@ -295,6 +295,6 @@
   - type: Stamp
     stampedName: stamp-component-stamped-name-psychologist 
     stampedColor: "#5B97BC"
-    stampStae: "paper_stamp-psychologist"
+    stampSate: "paper_stamp-psychologist"
   - type: Sprite
     state: stamp-psychologist
