SvS event fixes, enable SvS in secret rotation....scary

--- a/Resources/Prototypes/GameRules/roundstart.yml
+++ b/Resources/Prototypes/GameRules/roundstart.yml
@@ -206,10 +206,10 @@
 
 - type: entity
   parent: BaseTraitorRuleNoRandomObjectives
-  id: SpyVsSpy5TC
+  id: SpyVsSpy3TC
   components:
   - type: TraitorRule
-    startingBalance: 5
+    startingBalance: 3
   - type: GameRule
     minPlayers: 15
     delay:
@@ -223,6 +223,7 @@
   - type: AntagSelection
     definitions:
     - prefRoles: [ Traitor ]
+      fallbackRoles: [ TraitorSleeper ]
       max: 100
       playerRatio: 1
       blacklist:
@@ -243,8 +244,8 @@
   - type: GameRule
     minPlayers: 15
     delay:
-      min: 240
-      max: 420
+      min: 2
+      max: 4
   - type: AntagObjectives
     objectives:
     - KillRandomTraitorSvSObjective
@@ -253,6 +254,7 @@
   - type: AntagSelection
     definitions:
     - prefRoles: [ Traitor ]
+      fallbackRoles: [ TraitorSleeper ]
       max: 100
       playerRatio: 1
       blacklist:
@@ -346,6 +348,17 @@
         tableId: CargoGiftsTable
 
 - type: entityTable
+  id: SleeperlessGameRulesTable
+  table: !type:AllSelector # we need to pass a list of rules, since rules have further restrictions to consider via StationEventComp
+    children:
+      - !type:NestedSelector
+        tableId: BasicCalmEventsTable
+      - !type:NestedSelector
+        tableId: SleeperlessAntagEventsTable
+      - !type:NestedSelector
+        tableId: CargoGiftsTable
+
+- type: entityTable
   id: SpaceTrafficControlTable
   table: !type:AllSelector # we need to pass a list of rules, since rules have further restrictions to consider via StationEventComp
     children:
@@ -363,6 +376,14 @@
   - type: BasicStationEventScheduler
     scheduledGameRules: !type:NestedSelector
       tableId: BasicGameRulesTable
+
+- type: entity
+  id: SleeperlessStationEventScheduler
+  parent: BaseGameRule
+  components:
+  - type: BasicStationEventScheduler
+    scheduledGameRules: !type:NestedSelector
+      tableId: SleeperlessGameRulesTable
 
 - type: entity
   id: RampingStationEventScheduler
