--- a/Resources/Prototypes/secret_weights.yml
+++ b/Resources/Prototypes/secret_weights.yml
@@ -1,9 +1,10 @@
 - type: weightedRandom
   id: Secret
   weights:
-    Nukeops: 0.20
-    Traitor: 0.60
-    Changeling: 0.20
+    Nukeops: 0.10
+    Traitor: 0.50
+    SpyVsSpy: 0.10
+    Changeling: 0.10
     Zombie: 0.04
     Zombieteors: 0.01
     Survival: 0.09
